# 42cursus-push_swap

./: CMakeLists.txt  Makefile  README.md  a.out  check_arg.c  checker  deque.c  deque_utils.c  parsing.c  push_swap  push_swap.c  push_swap.h  push_swap.h.gch  pushswap.c  pushswap.h  sort.c  spr.c  utils.c
bonus/: a_to_b.c  b_to_a.c  check_arg.c  check_arg_bonus.c  deque.c  deque_bonus.c  deque_utils.c  deque_utils_bonus.c  get_next_line.c  get_next_line_bonus.c  get_next_line_utils.c  get_next_line_utils_bonus.c  main_bonus.c  operations_push.c  operations_push_bonus.c  operations_reverse.c  operations_reverse_bonus.c  operations_rotate.c  operations_rotate_bonus.c  operations_swap.c  operations_swap_bonus.c  parsing.c  parsing_bonus.c  push_swap.c  sort_five_a.c  sort_five_a2.c  sort_five_b.c  sort_five_b2.c  sort_intarr.c  sort_list.c  sort_onlyfive.c  sort_onlyfour.c  sort_onlythree.c  utils_bonus.c
inc/: get_next_line.h  get_next_line_bonus.h  push_swap.h  push_swap_bonus.h
libft/: ft_bzero.c  ft_calloc.c  ft_isprint.c  ft_lstmap.c  ft_memset.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c
prev_push_swap/: CMakeLists.txt  Makefile  README.md
prev_push_swap/libft/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstclear.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strjoin.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
prev_push_swap/src/: a_to_b.c  b_to_a.c
retry/inc/: push_swap.h
retry/libft/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_striteri.c  ft_strlen.c
retry/src/: operations_rotate.c  operations_swap.c  parsing.c  push_swap.c  sort_five_b.c
src/: check_arg.c  deque_utils.c  main.c  operations_push.c  parsing.c  sort_five_a.c  sort_five_a2.c  sort_five_b2.c  sort_intarr.c  sort_list.c  sort_onlythree.c
